Fix popupmenu touch issue on mobile

--- a/animations/animations.css
+++ b/animations/animations.css
@@ -79,6 +79,12 @@
         opacity: 0;
         transform: translateY(20%);
     }
+    25%{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
 }
 
 .shake {
