--- a/inputs/inputs.css
+++ b/inputs/inputs.css
@@ -261,9 +261,15 @@ div.popupmenu > div {
     box-shadow: 0 0 10px 0 lightgray;
 }
 
-div.popupmenu:active > div,
+div.popupmenu > button:focus + div,
 div.popupmenu > div:hover {
     display: initial;
+    /* We need to animate from below here, so that the popupmenu
+       is on top of the button when the user clicks/touches. On
+       touch devices this would result in an instant click on the
+       top popupmenu item. */
+    animation: popupmenu-from-below;
+    animation-duration: 0.3s;
 }
 
 div.popupmenu > button[disabled] + div {
@@ -282,4 +288,17 @@ div.popupmenu > div > button {
 
 div.popupmenu > div > button .material-icons {
     margin-right: 9px;
+}
+
+@keyframes popupmenu-from-below {
+    from {
+        opacity: 0;
+        transform: translateY(40px);
+    }
+    25%{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
 }
